--- a/2021-1/beamer/C23_md1.tex
+++ b/2021-1/beamer/C23_md1.tex
@@ -113,7 +113,7 @@
     
         \begin{itemize}
             \item No se conoce ningún algoritmo general para encontrar el número cromático de un grafo que trabaje en ``tiempo polinomial''
-            \item Sin embargo hay un método simple de hacer una coloración cromática usando un  ``razonable'' número de colores.
+            \item Sin embargo hay un método simple de hacer una coloración usando un  ``razonable'' número de colores.
         \end{itemize}
 
         \vskip .6cm
@@ -404,17 +404,20 @@ El orden fue elegido de la siguiente forma: dado el coloreo con colores $\chi(G)
         \ref{it.com_a} Sea $v_1,v_2,\ldots,v_n$ un ordenamiento cualquiera de los vértices de $G$. 
         \vskip .2 cm
         Para cada vértice $v$, si $S$ son los colores de los vecinos a $v$ $\Rightarrow$ $|S| \le k$. 
-        \vskip .2 cm
-        Luego puedo elegir un color entre $0$ y $k$. 
         \vskip .4 cm
-        \ref{it.com_b}         \begin{enumerate}
-            \item Sea $v_n$ un vértice con $\delta(v_n) < k$. 
-            \item Sean $v_{n-1},v_{n-2},\ldots,v_{n-r}$ los adyacentes a $v_n$. Hay a lo más $k-1$ de ellos.
-            \item Luego se van eligiendo los adyacentes a $v_i$  que no están listados antes ($n > i \ge 1$). 
-            \item Si $i < n$ el vértice $v_i$ tiene un adyacente a nivel superior $\Rightarrow$ $v_i$ tiene  a lo más $k-1$ adyacentes a nivel inferior. 
-            \item Si $i < n$, usando greedy y por (4),  se puede colorear $v_i$ con un color en $\{1,\ldots,k\}$.
-            \item Por (2) se puede colorear $v_n$   on un color en $\{1,\ldots,k\}$.\qed
-        \end{enumerate}      
+        \ref{it.com_b}       
+            (1) Sea $v_n$ un vértice con $\delta(v_n) < k$. 
+            \vskip .2 cm
+            (2) Sean $v_{n-1},v_{n-2},\ldots,v_{n-r}$ los adyacentes a $v_n$. Hay a lo más $k-1$ de ellos.
+            \vskip .2 cm
+            (3) Luego se van eligiendo los adyacentes a $v_i$  que no están listados antes ($n > i \ge 1$). 
+            \vskip .2 cm
+            (4) Si $i < n$ el vértice $v_i$ tiene un adyacente a nivel superior $\Rightarrow$ $v_i$ tiene  a lo más $k-1$ adyacentes a nivel inferior. 
+            \vskip .2 cm
+            (5) Si $i < n$, usando greedy y por (4),  se puede colorear $v_i$ con un color en $\{1,\ldots,k\}$.
+            \vskip .2 cm
+            (6) Por (2) se puede colorear $v_n$   on un color en $\{1,\ldots,k\}$.\qed
+  
         \end{proof}
     
     \end{frame}
@@ -424,7 +427,81 @@ El orden fue elegido de la siguiente forma: dado el coloreo con colores $\chi(G)
     \begin{frame}
         \frametitle{Grafos bipartitos}
     
+        \begin{definicion} Sea $G$  grafo. Diremos que $G$  es \textit{bipartito} si $\chi(G) = 2$. Es decir,  si se puede colorear con dos colores.
+        \end{definicion}
+
         
+        \begin{ejemplo}
+        \begin{center}
+        \begin{tabular}{llll}
+            & 
+            \begin{tikzpicture}[scale=1.2]
+            \tikzset{VertexStyle/.append style={fill= red!50}}
+            \Vertex[x=0.00, y=0.00]{0}
+            \Vertex[x=2.00, y=-2.00]{2}
+            \Vertex[x=2.00 + 1, y=0.00 + 1]{5}
+            \Vertex[x=0.00 + 1, y=-2.00 + 1]{7}
+            \tikzset{VertexStyle/.append style={fill= blue!50}}
+            \Vertex[x=0.00 , y=-2.00]{3}
+            \Vertex[x=0.00 + 1, y=0.00 + 1]{4}
+            \Vertex[x=2.00, y=0.00]{1}
+            \Vertex[x=2.00 + 1, y=-2.00 + 1]{6}
+        
+            \Edges(0,1,2,3,0,4,5,6,7,4)
+            \Edges(1,5)
+            \Edges(2,6)
+            \Edges(3,7)
+            \end{tikzpicture}
+            &
+            \qquad  \qquad
+            & 
+            \begin{tikzpicture}[scale=1.2]
+            \tikzset{VertexStyle/.append style={fill= red!50}}
+            \Vertex[x=0.00, y=0.00]{0}
+            \Vertex[x=0.0, y=-1.00]{2}
+            \Vertex[x=0.00 , y=-2.00]{5}
+            \Vertex[x=0.00, y=-3.00]{7}
+            \tikzset{VertexStyle/.append style={fill= blue!50}}
+            \Vertex[x=2.00, y=0.00]{1}
+            \Vertex[x=2.00 , y=-1.00]{3}
+            \Vertex[x=2.00, y=-2.00]{4}
+            \Vertex[x=2.00, y=-3.00]{6}
+            \Edges(0,1,2,3,0,4,5,6,7,4)
+            \Edges(1,5)
+            \Edges(2,6)
+            \Edges(3,7)
+            \end{tikzpicture}
+        \end{tabular}
+    \end{center}
+\end{ejemplo}
+    \end{frame}
+
+
+
+    \begin{frame}
+        \frametitle{}
+
+        Una consecuencia importante del algoritmo greedy es el siguiente teorema. 
+
+        \vskip .4cm 
+        \begin{teorema}\label{t5.7.2} Un grafo es bipartito si  y sólo si no contiene ciclos de longitud impar.
+        \end{teorema}
+        \begin{proof} 
+            
+        ($\Rightarrow$) El contrarrecíproco: si $G$ tiene un ciclo de longitud impar $\Rightarrow$ no es bipartito. 
+        
+        \vskip .2cm 
+
+        Esto es cierto, pues un ciclo de longitud impar requiere $3$ colores.
+
+        \vskip .4cm 
+
+        ($\Leftarrow$) Supongamos que $G$ es un grafo sin ciclos de longitud impar y conexo. 
+        \vskip .2cm
+        Construiremos un orden de $G$ para el cual el algoritmo greedy producirá una coloración de vértices con dos colores. 
+
+        
+    \end{proof}
     
     \end{frame}
 
@@ -434,13 +511,59 @@ El orden fue elegido de la siguiente forma: dado el coloreo con colores $\chi(G)
         \frametitle{}
     
         
-    
+        \begin{itemize}
+            \item Elijamos cualquier vértice y llamémoslo $v_1$; diremos que $v_1$ esta en el \textit{nivel $0$}. 
+            \vskip .2cm
+            \item A continuación, listemos la lista de vecinos de $v_1$, llamémoslos $v_2,v_3, \dots,v_r$; diremos que estos vértices están en el \textit{nivel 1}. 
+            \vskip .2cm
+            \item Continuando de esta manera, definimos el \textit{nivel $i$} como todos aquellos vértices adyacentes a los del {nivel $i-1$}, exceptuando aquellos previamente listados en el {nivel $i-2$}. 
+        \end{itemize}
+        
+        \vskip .3cm
+        
+        Cuando ningún nuevo vértice puede ser agregado de esta forma, obtenemos $G$ (pues es conexo).
+        \vskip .3cm
+        El hecho crucial producido por este orden es que un vértice del nivel $i$ solo puede ser adyacente a vértices de los niveles $i-1$ y $i+1$, y no a vértices del mismo nivel.
     \end{frame}
 
 
+        \begin{frame}
+            \frametitle{}
+    
 
-    \begin{frame}
-        \frametitle{}
+        Supongamos que $x$ e $y$ son vértices en el mismo nivel.
+        \vskip .2cm
+        Entonces ellos son unidos por caminos de igual longitud $m$ a algún vértice $z$ de un nivel anterior. 
+        \vskip .2cm
+        Los caminos pueden ser elegidos de tal manera que $z$ sea el único vértice común. 
+        \vskip .2cm
+        Si $x$ e $y$ fueran adyacentes, habría un ciclo de longitud $2m+1$, lo cual contradice
+        la hipótesis. 
+        \vskip .2cm
+            \begin{center}
+            \begin{tikzpicture}[scale=1]
+            \SetVertexSimple[Shape=circle,MinSize=5 pt,FillColor=white]
+            \Vertex[x=0.00, y=0.00]{0}
+            \Vertex[x=-2.50, y=-1.3]{1}
+            \Vertex[x=-3, y=-2.0]{2}
+            \Vertex[x=-2.6 , y=-2.8]{3}
+            \Vertex[x=1.00, y=-1.4]{4}
+            \Vertex[x=1.00 , y=-2.1]{5}
+            \Vertex[x=2, y=-2.8]{6}
+            \draw (-2.6,-3.2) node {$x$};
+            \draw (2,-3.2) node {$y$};
+            \draw (0,0.3) node {$z$};
+            \Edges(1,2,3)
+            \Edges(4,5,6)
+            \begin{scope}   [dashed]  % now dashed is for the lines inside the scope
+            \Edge (0)(1)
+            \Edge (0)(4)
+            \Edge (6)(3)
+            \end{scope}
+            \end{tikzpicture}
+            \end{center}
+
+
     
         
     
@@ -450,7 +573,18 @@ El orden fue elegido de la siguiente forma: dado el coloreo con colores $\chi(G)
 
     \begin{frame}
         \frametitle{}
-    
+            
+        Se deduce entonces que el algoritmo greedy asigna:
+        \vskip .4cm
+        \begin{itemize}
+            \item el color $1$ a los vértices en el nivel $0,2,4,\ldots$,
+            \vskip .2cm
+            \item el color $2$ a los vértices en los niveles $1,3,5,\ldots$.
+        \end{itemize}
+        \vskip .4cm
+        Por consiguiente $\chi(G_0)=2$. \qed
+        
+        \vskip 3cm
         
     
     \end{frame}
